# palindromi.fi

./: .darglint2  .flake8  .gitignore  Makefile  index.html  main.css  mypy.ini  pyproject.toml
.github/actions/upload-rendered/: Dockerfile  action.yaml  entrypoint.sh
.github/workflows/: deploy.yaml  formatting.yaml  linting.yaml
database/: INBOX.yaml
database/palindromes/: 01-first.yaml  02-additional.yaml  99-illustrated.yaml  additional.yaml  all.yaml
html/: 22GQFL  2GyZHB  2N1xFx  2U9ndH  2hrNn9  2nHBxy  3B7B2Y  3PoYpG  3VR12v  3i2xco  3uHUAh  4Ac22B  4E1UPi  4EjS7b  4i5CcU  4jsrZw  4kJVcw  51a2sW  58JfMm  5DGzEE  5HNB1N  5JiPLt  5KiidW  5URGHz  5aHUog  5eSqGP  5zbU2w  5zn32r  68LNwj  6AByQ5  6MidUR  6jjKkf  6kVy89  6sZidL  73KARv  76rQBg  7ArRZh  7N3kSo  7TZDaR  7VtTVQ  (+8 more)
html/static/__target__/: org.transcrypt.__runtime__.js  palindrome.js  palindrome.map  palindrome.project  palindrome.py
palindromi_fi_builder/: __init__.py  __main__.py  database.py  load.py  palindrome.py  render.py  server.py  syncer.py  typography.py
palindromi_fi_builder/adhoc/: flowdock.py  zoho_notebook.py
palindromi_fi_builder/static/: main.css  palindrome.py
palindromi_fi_builder/templates/: palindrome.html
palindromi_fi_builder/tests/: test_syncer.py  test_typography.py
