[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "palindromi_fi_builder"
authors = [{name = "Antti Kaihola", email = "13725+akaihola@users.noreply.github.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "base58",
    "beautifulsoup4",
    "click",
    "jinja2",
    "ruamel.yaml",
    "setuptools",
    "transcrypt",
]

[project.optional-dependencies]
test = [
    "flake8",
    "mypy",
    "pylint",
    "pytest",
    "types-beautifulsoup4",
    "types-requests",
]

[project.urls]
Home = "https://github.com/akaihola/palindromi_fi_builder"

[tool.darker]
src = ["palindromi_fi_builder"]
revision = "origin/main..."
isort = true
